# ResearchAutoflow

./: README.md  pyproject.toml
example/: example.ipynb
src/aws/: s3.py
src/config/: models.py
src/experiments/: create_log.py  run_code.py  run_experiment.py  util.py
src/llm_interaction/: arxiv.py  experiment.py  prompt.py  provider.py  slide.py
src/openai_interaction/: arxiv.py  experiment.py  github.py
src/paper_analysis/: arxiv.py
